# godot-sandbox

./: .all-contributorsrc  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SCSub  SConstruct  SCsub  THIRDPARTY.txt  build_android.sh  build_mingw.sh  build_utils.py  config.py  libriscv_settings.h  mingw.sh  mingw_toolchain.cmake  register_types.cpp  register_types.h
.github/workflows/: build.yaml  build_android.yml  build_docker.yml  build_gdscript_elf.yml  build_godot.yml  build_ios.yml  build_linux.yml  build_macos.yml  build_macos_static.yml  build_module.yml  build_web.yml  build_windows.yml  cmake_example.yml  jit_linux.yml  jit_macos.yml  jit_windows.yml  lint.yml  release.yml  runner.yml  unittests.yml
doc_classes/: ELFScript.xml  Sandbox.xml
ext/: CMakeLists.txt
module/: SCsub  register_types.cpp  register_types.h
program/: Dockerfile  build.sh  syscalls.h  test.cpp  variant.cpp  variant.hpp
program/api/: api.cpp  api.hpp  native.cpp  syscalls.h  syscalls_fwd.hpp  variant.cpp  variant.hpp
program/asm/: CMakeLists.txt  build.sh  main.cpp
program/cpp/: Dockerfile  build.sh  gdscript_compiler.cpp
program/cpp/api/: api.cpp  api.hpp  api_inline.hpp  array.cpp  array.hpp  basis.cpp  basis.hpp  callable.hpp  canvas_item.hpp  color.hpp  dictionary.cpp  dictionary.hpp  node.cpp  node.hpp  node2d.cpp  node2d.hpp  node3d.cpp  node3d.hpp  object.cpp  object.hpp  packed_array.cpp  packed_array.hpp  quaternion.cpp  quaternion.hpp  string.cpp  string.hpp  syscalls.h  syscalls_fwd.hpp  timer.cpp  timer.hpp  transform2d.cpp  transform2d.hpp  transform3d.cpp  transform3d.hpp  variant.cpp  variant.hpp  vector.cpp  vector.hpp  vector2.hpp
program/cpp/cmake/: CMakeLists.txt  toolchain.cmake
program/cpp/cmake/example/: CMakeLists.txt  build.sh  example.cpp
program/cpp/gdscript_compiler/: CMakeLists.txt
program/cpp/gdscript_compiler/src/: compiler_main.cpp
program/cpp/project/: CMakeLists.txt  README.md  build.sh
program/cpp/project/src/: program.cpp
program/libtcc/: CMakeLists.txt  main.cpp  tccdefs_.h
program/lua/: CMakeLists.txt  build.sh  main.cpp  toolchain.cmake
program/rust/: Cargo.toml  Dockerfile  build.sh  container_build.sh  start.sh  stop_and_remove.sh
program/rust/.cargo/: config
program/rust/docker/: start.sh
program/rust/src/: api.rs  main.rs  sysalloc.rs
program/rust/test/: main.rs
program/service/: .gitignore  Dockerfile  index.js  package-lock.json  package.json
program/zig/: build.sh
program/zig/api/: api.zig
src/: config.h  docker.cpp  docker.h  guest_datatypes.h  guest_variant.cpp  gvar.cpp  override_libriscv.cpp  register_types.cpp  register_types.h  resource_cpp.cpp  resource_cpp.h  resource_elf.cpp  resource_elf.h  resource_loader_cpp.cpp  resource_loader_elf.cpp  resource_loader_elf.h  riscv.hpp  sandbox.cpp  sandbox.h  sandbox.hpp  sandbox_bintr.cpp  sandbox_debug.cpp  sandbox_exception.cpp  sandbox_functions.cpp  sandbox_generated_api.cpp  sandbox_globals.cpp  sandbox_profiling.cpp  sandbox_programs.cpp  sandbox_project_settings.cpp  sandbox_project_settings.h  sandbox_restrictions.cpp  sandbox_shm.cpp  sandbox_syscalls.cpp  sandbox_syscalls_2d.cpp  sandbox_syscalls_3d.cpp  scoped_tree_base.h  script_language_common.h  shmain.cpp  syscalls.cpp  syscalls.h  (+4 more)
src/cpp/: resource_loader_cpp.cpp  resource_loader_cpp.h  resource_saver_cpp.cpp  resource_saver_cpp.h  script_cpp.cpp  script_cpp.h  script_cpp.hpp  script_cpp_instance.cpp  script_cpp_instance.h  script_language_cpp.cpp  script_language_cpp.h
src/elf/: resource_loader_elf.cpp  resource_loader_elf.h  resource_saver_elf.cpp  resource_saver_elf.h  script_elf.cpp  script_elf.h  script_instance.cpp  script_instance.h  script_instance.hpp  script_instance_elf.cpp  script_instance_elf.h  script_instance_helper.h  script_instance_helper.hpp  script_language_elf.cpp  script_language_elf.h  script_language_elf.hpp
src/gdscript/compiler/: .gitignore  CMakeLists.txt  OPTIMIZATIONS.md  ast.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  compiler_exception.cpp  compiler_exception.h  dump_ir.cpp  elf_builder.cpp  elf_builder.h  gdscript_to_riscv.cpp  ir.cpp  ir.h  ir_interpreter.cpp  ir_interpreter.h  ir_optimizer.cpp  ir_optimizer.h  lexer.cpp  lexer.h  parser.cpp  parser.h  register_allocator.cpp  register_allocator.h  riscv_codegen.cpp  riscv_codegen.h  test_compiler.cpp  token.cpp  token.h  variant_types.h
src/gdscript/compiler/tests/: test_codegen.cpp  test_codegen_literals.cpp  test_compilation.cpp  test_constant_pool.cpp  test_integration.cpp  test_ir_optimizer.cpp  test_lexer.cpp  test_literals_integration.cpp  test_parser.cpp  test_parser_literals.cpp  test_primitives.cpp
src/gdscript_elf/: AGENTS.md  IMPLEMENTATION_STATUS.md  SIMPLIFICATION_ANALYSIS.md  TODO.md
src/godot/: script_instance.cpp  script_instance.h
src/rust/: resource_loader_rust.cpp  resource_loader_rust.h  resource_saver_rust.cpp  resource_saver_rust.h  script_language_rust.cpp  script_language_rust.h  script_rust.cpp  script_rust.h
src/safegdscript/: resource_loader_safegdscript.cpp  resource_loader_safegdscript.h  resource_saver_safegdscript.cpp  resource_saver_safegdscript.h  script_instance_safegdscript.cpp  script_instance_safegdscript.h  script_language_safegdscript.cpp  script_language_safegdscript.h  script_safegdscript.cpp  script_safegdscript.h
src/tests/: assault.cpp
src/zig/: resource_loader_zig.cpp  resource_loader_zig.h  resource_saver_zig.cpp  resource_saver_zig.h  script_language_zig.cpp  script_language_zig.h  script_zig.cpp  script_zig.h
tests/: .gutconfig.json  CMakeLists.txt  project.godot  run_unittests.sh  toolchain.cmake  zig_unittests.sh
tests/addons/godot_sandbox/: gdscript.elf
tests/extensions/: libgodot-riscv.gdextension
tests/tests/: test_basic.cpp  test_basic.gd  test_cppscript.gd  test_gdscript_compiler.cpp  test_gdscript_compiler.gd  test_generate_api.gd  test_math.cpp  test_math.gd  test_properties.cpp  test_properties.gd  test_register_allocation.gd  test_restrictions.gd  test_shm.cpp  test_shm.gd
(+86 files in other folders)
